--- a/layouts/_partials/hero.html
+++ b/layouts/_partials/hero.html
@@ -1,7 +1,8 @@
 <div class="hero-banner">
-  <img src="{{ "" | relURL }}" alt="Banner" class="hero-image" />
+<img src="/banner.png" alt="Banner" class="hero-image" />
   <nav class="hero-nav">
     <ul>
+      <!-- TODO - Rendre tout dynamique -->
       <li><a href="/">Bienvenue</a></li>
       <li><a href="/groupes/">Groupes</a></li>
       <li><a href="/journees-nationales/">Journées Nationales</a></li>
