--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -9,7 +9,7 @@
       <header>
         {{ partial "header.html" . }}
       </header>
-      <!-- {{ partial "hero.html" . }} -->
+      {{ partial "hero.html" . }}
       <main>
         {{ block "main" . }}{{ end }}
       </main>
