--- a/layouts/_partials/hero.html
+++ b/layouts/_partials/hero.html
@@ -7,7 +7,7 @@
       <li><a href="/groupes/">Groupes</a></li>
       <li><a href="/journees-nationales/">Journées Nationales</a></li>
       <li><a href="/ecoles/">Écoles</a></li>
-      <li><a href="/actions/">Actions en cours</a></li>
+      <li><a href="/actionsTest/">Actions en cours</a></li>
     </ul>
   </nav>
 </div>
