--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
+  <link rel="stylesheet" href="asset/css/main.css">
   {{ partial "head.html" . }}
 </head>
 <body>
