--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,11 @@ body {
   font-family: sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
+
 .site-bg {
   min-height: 100vh;
   background: #f3f3f3;
