--- a/layouts/_partials/hero.html
+++ b/layouts/_partials/hero.html
@@ -50,7 +50,7 @@
         {{ if gt (len $children) 0 }}
           <li class="dropdown">
             <!-- Le lien principal avec une petite flèche pour indiquer l'existence d'un dropdown -->
-            <a href="{{ .Page.Permalink }}" class="dropdown-toggle">{{ .Name }} (emoji de fleche vers le bas)</a>
+            <a href="{{ .Page.Permalink }}" class="dropdown-toggle">{{ .Name }} ↓</a>
             
             <!-- Menu déroulant avec tous les enfants -->
             <ul class="dropdown-menu">
