--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,11 +64,28 @@ a:hover {
   margin-bottom: 2rem;
 }
 
-.site-bg .site-container .hero-banner .hero-image {
+/* Slideshow des banners */
+.hero-banner .slides-wrapper {
+  position: relative;
+  width: 100%;
+  height: 260px;
+  overflow: hidden;
+}
+.hero-banner .slide {
+  position: absolute;
   width: 100%;
   height: 260px;
   object-fit: cover;
-  display: block;
+  opacity: 0;
+  transition: opacity 1s;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.hero-banner .slide.active {
+  opacity: 1;
+  z-index: 2;
+  pointer-events: auto;
 }
 
 /* #### Partie navigation du hero #### */
@@ -79,6 +96,7 @@ a:hover {
   bottom: 0;
   background: rgba(0,0,0,0.92);
   padding: 0.5rem 2rem;
+  z-index: 2;
 }
 
 .site-bg .site-container .hero-banner .hero-nav ul {
@@ -235,13 +253,10 @@ a:hover {
   }
 
   /* No banner image for phones? */
-  .site-bg .site-container .hero-banner .hero-image {
+  .site-bg .site-container .hero-banner .slides-wrapper {
     display: none !important;
   }
 
-  .site-bg .site-container .hero-banner .hero-nav {
-    padding: 0.5rem 1rem;
-  }
 
   .site-bg .site-container .hero-banner .hero-nav ul {
     flex-direction: column;
@@ -359,7 +374,7 @@ a:hover {
   }
 
   /* #### Hero section tablette/big phone #### */
-  .site-bg .site-container .hero-banner .hero-image {
+  .site-bg .site-container .hero-banner .slides-wrapper {
     height: 220px;
   }
 
