--- a/layouts/_partials/hero.html
+++ b/layouts/_partials/hero.html
@@ -48,7 +48,7 @@
         {{ if gt (len $children) 0 }}
           <li class="dropdown">
             <!-- Le lien principal avec une petite flèche pour indiquer l'existence d'un dropdown -->
-            <a href="{{ .URL }}" class="dropdown-toggle">{{ .Name }} ↓</a>
+            <a href="{{ .URL }}" class="dropdown-toggle">{{ .Name }} ⌄</a>
             
             <!-- Menu déroulant avec tous les enfants -->
             <ul class="dropdown-menu">
