[2.15] Mettre en place la barre de recherche

--- a/layouts/_partials/hero.html
+++ b/layouts/_partials/hero.html
@@ -1,6 +1,8 @@
 <div class="hero-banner">
   <!-- Image du banner -->
-  <img src="/banner.png" alt="Banner" class="hero-image" />
+  <a href="/">
+    <img src="/banner.png" alt="Banner" class="hero-image" />
+  </a>
   
   <!-- Navigation -->
   <nav class="hero-nav">
