--- a/layouts/_partials/scripts.html
+++ b/layouts/_partials/scripts.html
@@ -1,5 +1,5 @@
 <!-- Inclusion de ton main.js -->
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
 
 <!-- Fuse.js pour la recherche -->
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
@@ -13,5 +13,5 @@
   <script src="{{ $searchJs.RelPermalink }}"></script>
 {{ else }}
   <!-- Fallback vers static/ si pas trouvé dans assets/ -->
-  <script src="/js/search.js"></script>
+  <script src="js/search.js"></script>
 {{ end }}
