--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -4,7 +4,7 @@
     <a href="/">{{ site.Title }}</a>
   </h1>
   <h3 class="description-titre">
-    GdR Génie de la Programmation et du Logiciel
+    GdR Sciences du Logiciel
   </h3>
   </div>
 
